--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^12.10.4",
     "lucide-react": "^0.508.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
